feat: introduce NodeDefinitionExecutorAdapter to bridge NodeDefinitionProvider-based nodes with PluginNodeExecutor, add tested GoogleDriveListNode and GoogleDriveListExecutor for file listing in Google Drive, update PluginNodeSynchronizer to adapt executors, and remove obsolete NodeProfileSchemaRegressionTest